<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mkhan.salecalculator.MainActivity">

    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:title="@string/share_title"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_app"
        android:title="@string/rate_app_title"
        android:orderInCategory="2"
        app:showAsAction="never" />

</menu>
