<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkhan.salecalculator.MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInitialPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:background="@color/colorAccent"
        android:text="@string/original_price"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toBottomOf="@+id/txtFinalLabel"
        ads:layout_constraintLeft_toLeftOf="@+id/editTextInitial" />

    <EditText
        android:id="@+id/editTextInitial"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:background="@android:color/background_light"

        android:hint="@string/orig_price_hint"
        android:inputType="numberDecimal"
        android:maxLength="@integer/original_price_max_length"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        ads:layout_constraintLeft_toLeftOf="@+id/tableLayout"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        android:layout_marginTop="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/txtInitialPrice"
        ads:layout_constraintVertical_bias="0.58000004" />

    <TextView
        android:id="@+id/txtFinalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="Final Price"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/txtFinalPrice"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/adView"
        ads:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/txtFinalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price_blank"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="@+id/txtFinalLabel"
        ads:layout_constraintBottom_toBottomOf="@+id/editTextInitial"
        android:layout_marginBottom="8dp"
        ads:layout_constraintTop_toTopOf="@+id/editTextInitial"
        android:layout_marginTop="0dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorTableBackground"
        app:layout_constraintBottom_toTopOf="@+id/edittextOther"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn10"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_10_text"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btn20"
                style="@style/ButtonThemeAlternate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_20_text"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btn30"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_30_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn40"
                style="@style/ButtonThemeAlternate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_40_text" />

            <Button
                android:id="@+id/btn50"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_50_text" />

            <Button
                android:id="@+id/btn60"
                style="@style/ButtonThemeAlternate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_60_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn70"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_70_text" />

            <Button
                android:id="@+id/btn80"
                style="@style/ButtonThemeAlternate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_80_text" />

            <Button
                android:id="@+id/btn90"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_90_text" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/edittextOther"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="Other %"
        android:inputType="numberDecimal"
        android:maxLength="@integer/other_discount_max_length"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btnCalulate"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorTableBackground"
        android:onClick="calculatePercentage"
        android:text="Calculate"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/edittextOther"
        ads:layout_constraintBottom_toBottomOf="@+id/edittextOther"
        android:layout_marginBottom="0dp" />


</android.support.constraint.ConstraintLayout>
